syntax = "proto3";
package auction.v1;

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Gravity-Bridge/Gravity-Bridge/module/x/auction/types";

message AuctionPeriod {
    uint64 id = 1;
    uint64 start_block_height = 2;
    repeated Auction aucitons = 3;
}

enum Auction_Status{
    IN_PROGRESS = 0;
    FINISH = 1;
 }

message Auction {
    uint64 id = 1;
    cosmos.base.v1beta1.Coin auction_amount = 2;
    Auction_Status status = 3;
    Bid highest_bid = 4;
}

message Bid {
    uint64 id = 1;
    cosmos.base.v1beta1.Coin bid_amount = 2;
    string bidder_address = 3;
}